# tclcurl

./: .gitignore  CMakeLists.txt  Makefile  Makefile.in  configure  configure.ac  curl.tcl  license.terms  manifest.uuid  pkgIndex.tcl  pkgIndex.tcl.in  tclcurl.c  tclcurl.h  test.tcl
.github/workflows/: linux-build.yml
doc/: tclcurl.n
generic/: tclcurl.c  tclcurl.h
tests/: curl.test
